# pet-clinic

./: .gitignore  .gitmodules  README.md
axum-petclinic-service/: Cargo.toml  Makefile  README.md
axum-petclinic-service/src/: error.rs  main.rs  mod.rs
axum-petclinic-service/src/api/: mod.rs
axum-petclinic-service/src/api/health/: mod.rs
axum-petclinic-service/src/api/info/: mod.rs
axum-petclinic-service/src/api/owner/: mod.rs  model.rs  service.rs
axum-petclinic-service/src/api/pet/: mod.rs  service.rs
axum-petclinic-service/src/api/vet/: mod.rs
axum-petclinic-service/src/api/visit/: mod.rs
axum-petclinic-service/src/db/: mod.rs
axum-petclinic-service/src/middleware/: mod.rs
axum-petclinic-service/src/repository/: mod.rs  owner.rs  schema.rs
axum-petclinic-service/tests/: quick_dev.rs
fx-petclinic-service/: go.mod  go.sum
golang-petclinic-rest/: README.md  go.mod  server.go
golang-petclinic-rest/app/: config.go  database_config.go  info_config.go
golang-petclinic-rest/config/: app-stg.yaml  app.yaml
golang-petclinic-rest/docs/: swagger.yaml
golang-petclinic-service/: .env  .mockery.yaml  DISTRIB_SYSTEM.md  Dockerfile  Makefile  README.md  go.mod  go.sum
golang-petclinic-service/app/: config.go  config_test.go  database_config_test.go  info_config_test.go  okta_config.go  okta_config_test.go  server_config.go  server_config_test.go
golang-petclinic-service/cmd/: server.go
golang-petclinic-service/config/: app-dev.yaml  app.yaml
wire-petclinic-service/: Dockerfile  go.mod  go.sum  server.go  wire.go
(+216 files in other folders)
