[package]
name = "axum-petclinic-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
derive_builder = {version = "0.20.0"}
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.116"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
anyhow = { version = "1.0.82" }
httpc-test = { version = "0.1.9" }